--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.44.2",
+    "react-loader-spinner": "^5.3.4",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-simple-captcha": "^9.0.2",
     "react-tabs": "^6.0.1",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.7.8",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
